# hue-chroma-accent

./: .gitlab-ci.yml  Cargo.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.wash2.HueChromaAccent.Devel.json
data/: com.github.wash2.HueChromaAccent.desktop.in.in  com.github.wash2.HueChromaAccent.gschema.xml.in  com.github.wash2.HueChromaAccent.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: window.ui
po/: POTFILES.in
src/: accent_palette.rs  application.rs  main.rs  util.rs  window.rs
src/components/: mod.rs
src/components/accent_editor/: imp.rs  mod.rs
